--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
         <div class="card">
             <div class="container_1" id="container_1">
-                <picture>
+                <picture alt="Background image">
                     <source media="(min-width:650px)" srcset="assets/images/illustration-sign-up-desktop.svg" />
                     <img src="assets/images/illustration-sign-up-mobile.svg" />
                 </picture>
@@ -47,7 +47,7 @@
             </div>
             <div class="container_2 hidden" id="container_2">
                 <div class="content">
-                    <img src="assets/images/icon-success.svg" />
+                    <img src="assets/images/icon-success.svg" alt="sucess image"/>
 
                     <h1>Thanks for subscribing!</h1>
                     <p>
@@ -62,7 +62,7 @@
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-            Coded by <a href="#">Your Name Here</a>.
+            Coded by <a href="#">Lorena Dev</a>.
         </div>
     </footer>
 
