--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="StyleSheet.css" />
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+    <title>Frontend Mentor | Newsletter sign-up form with success message</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap');
+    </style>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-  <script defer src="JavaScript.js"></script>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+        .attribution {
+            font-size: 11px;
+            text-align: center;
+        }
+
+            .attribution a {
+                color: hsl(228, 45%, 44%);
+            }
+    </style>
+    <script defer src="JavaScript.js"></script>
 </head>
 <body>
     <main>
         <div class="card">
             <div class="container_1" id="container_1">
                 <picture alt="Background image">
-                    <source media="(min-width:650px)" srcset="assets/images/illustration-sign-up-desktop.svg" />
-                    <img src="assets/images/illustration-sign-up-mobile.svg" />
+                    <source media="(min-width:650px)" srcset="assets/images/illustration-sign-up-desktop.svg"/>
+                    <img src="assets/images/illustration-sign-up-mobile.svg"/>
                 </picture>
                 <div class="content">
-                    <h1>Stay updated!</h1>
+                    <h1 >Stay updated!</h1>
                     <p>Join 60,000+ product managers receiving monthly updates on:</p>
                     <ul>
                         <li>Product discovery and building what matters</li>
@@ -33,21 +42,17 @@
                         <li>And much more!</li>
                     </ul>
                     <form class="form" id="form" method="get">
-                        <label class="label">
-                            Email address
-                            <span class="error hidden" id="error">
-                                Valid email required
-                            </span>
-                            <input id="email" name="email" placeholder="email@company.com" />
-                            <input class="button " id="button" value="Subscribe to monthly newsletter" type="submit" />
-                        </label>
-
+                        <label>Email address</label>
+                        <span id="required_email" class="error_msg hidden">Valid email required</span>
+                        <input id="email" name="email" placeholder="email@company.com" />
+                        <input class="button " id="button" value="Subscribe to monthly newsletter" type="submit" />
+                        <span aria-live="polite" id="email-error"></span>
                     </form>
                 </div>
             </div>
             <div class="container_2 hidden" id="container_2">
                 <div class="content">
-                    <img src="assets/images/icon-success.svg" alt="sucess image"/>
+                    <img id="succes_img"src="assets/images/icon-success.svg" alt="sucess image"/>
 
                     <h1>Thanks for subscribing!</h1>
                     <p>
